minio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
    - port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app: minio
